--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-var-1.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-var-1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kokonai House version 0.1</title>
+    <title>Kokonai Hub</title>
   </head>
   <body>
     <div id="root" ></div>
